Remove ReferenceModel and adjust logical expressions
Deleted the ReferenceModel and corresponding Repository as they're no longer needed. Adapted the handling of logical expressions in various models and tests to map the expression directly rather than the entire LogicalExpression object. Test data in JMeter script and AnfController have also been updated accordingly.